Fix z-index for header title

--- a/_sass/partials/_header.scss
+++ b/_sass/partials/_header.scss
@@ -58,6 +58,7 @@
         font-family: $font-serif;
         margin: auto;
         position: absolute;
+        z-index: -1;
         top: 0;
         left: 0;
         bottom: 0;
